// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugins/vue > should add vue-loader and VueLoaderPlugin correctly 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.vue\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/vue-loader/lib/index.js",
            "options": {
              "compilerOptions": {
                "preserveWhitespace": false,
              },
            },
          },
        ],
      },
    ],
  },
  "plugins": [
    VueLoaderPlugin {},
  ],
  "resolve": {
    "extensions": [
      ".vue",
    ],
  },
}
`;

exports[`plugins/vue > should allow to configure jsx babel plugin options 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.vue\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/vue-loader/lib/index.js",
            "options": {
              "compilerOptions": {
                "preserveWhitespace": false,
              },
            },
          },
        ],
      },
      {
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/builder-shared/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/builder-webpack-provider/compiled/babel-plugin-lodash",
                  {},
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-app/dist/cjs/babelPluginLockCorejsVersion",
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.23.1",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": false,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": {
                      "proposals": true,
                      "version": "3.32",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                    "optimizeConstEnums": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@vue/babel-preset-jsx/dist/plugin.cjs.js",
                  {
                    "injectH": false,
                  },
                ],
              ],
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/builder-shared/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/builder-webpack-provider/compiled/babel-plugin-lodash",
                  {},
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-app/dist/cjs/babelPluginLockCorejsVersion",
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.23.1",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": false,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": {
                      "proposals": true,
                      "version": "3.32",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                    "optimizeConstEnums": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@vue/babel-preset-jsx/dist/plugin.cjs.js",
                  {
                    "injectH": false,
                  },
                ],
              ],
            },
          },
        ],
      },
    ],
  },
  "plugins": [
    VueLoaderPlugin {},
  ],
  "resolve": {
    "extensions": [
      ".vue",
    ],
  },
}
`;

exports[`plugins/vue > should allow to configure vueLoader options 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.vue\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/vue-loader/lib/index.js",
            "options": {
              "compilerOptions": {
                "preserveWhitespace": false,
              },
              "hotReload": false,
            },
          },
        ],
      },
    ],
  },
  "plugins": [
    VueLoaderPlugin {},
  ],
  "resolve": {
    "extensions": [
      ".vue",
    ],
  },
}
`;

exports[`plugins/vue > should apply jsx babel plugin correctly 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.vue\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/vue-loader/lib/index.js",
            "options": {
              "compilerOptions": {
                "preserveWhitespace": false,
              },
            },
          },
        ],
      },
      {
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/builder-shared/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/builder-webpack-provider/compiled/babel-plugin-lodash",
                  {},
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-app/dist/cjs/babelPluginLockCorejsVersion",
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.23.1",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": false,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": {
                      "proposals": true,
                      "version": "3.32",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                    "optimizeConstEnums": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@vue/babel-preset-jsx/dist/plugin.cjs.js",
                  {
                    "injectH": true,
                  },
                ],
              ],
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/builder-shared/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/builder-webpack-provider/compiled/babel-plugin-lodash",
                  {},
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-app/dist/cjs/babelPluginLockCorejsVersion",
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.23.1",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@modern-js/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": false,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": {
                      "proposals": true,
                      "version": "3.32",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                    "optimizeConstEnums": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@vue/babel-preset-jsx/dist/plugin.cjs.js",
                  {
                    "injectH": true,
                  },
                ],
              ],
            },
          },
        ],
      },
    ],
  },
  "plugins": [
    VueLoaderPlugin {},
  ],
  "resolve": {
    "extensions": [
      ".vue",
    ],
  },
}
`;
